# server/src/main/resources/api.yaml
@@ -53,3 +53,73 @@ paths:
           in: path
           description:
           type: string
+  /offer/post:
+    post:
+      summary: Test case
+      description: description
+      tags:
+        - Offers
+      consumes:
+        - text/plain
+      parameters:
+        - name: id
+          in: query
+          description:
+          type: string
+          default: 1234
+        - name: productName
+          in: query
+          description:
+          type: string
+          default: DriveNow
+        - name: provider
+          in: query
+          description:
+          type: string
+          default: BMW
+        - name: description
+          in: query
+          description:
+          type: string
+          default: some Text
+        - name: validFrom
+          in: query
+          description:
+          type: string
+          default: 20180720
+        - name: validTo
+          in: query
+          description:
+          type: string
+          default: 20180725
+        - name: locationStart
+          in: query
+          description:
+          type: string
+          default: Munich
+        - name: locationEnd
+          in: query
+          description:
+          type: string
+          default: Berlin
+        - name: price
+          in: query
+          description:
+          type: string
+          default: 100
+        - name: currency
+          in: query
+          description:
+          type: string
+          default: eur
+        - name: co2emission
+          in: query
+          description:
+          type: string
+          default: 5/10
+        - name: options
+          in: query
+          description:
+          type: array
+          items:
+            type: string
